# agentic-nodes

./: .cursorignore  .env.example  .gitignore  README.md  config.py  control-loop.md  logging.md  memory.md  model.md  pyproject.toml  run.py  state.md  tool-registry.md
.planning/debug/: claude-code-provider-health.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: AgentRunSwimlanes.tsx  ContextBuilderPayloadModal.tsx  DisplayResponseModal.tsx  EnvironmentAgentMenu.tsx  EnvironmentRunSummary.tsx  EventTimeline.tsx  GraphCanvas.tsx  GraphCanvasEdge.tsx  GraphCanvasNode.tsx  GraphEnvEditor.tsx  GraphInspector.tsx  McpServerPanel.tsx  PromptBlockDetailsModal.tsx  ProviderDetailsModal.tsx  ProviderSummary.tsx  RunErrorHover.tsx  ToolDetailsModal.tsx
frontend/src/lib/: api.ts  contextBuilderBindings.ts  contextBuilderRuntime.ts  editor.ts  graphDocuments.ts  graphEnv.ts  hotbarFavorites.ts  nodeInstanceLabels.ts  nodeTooltip.ts  runSnapshots.ts  runVisualization.ts  toolNodeDetails.ts  types.ts  useGraphHistory.ts
src/graph_agent/: __init__.py  config.py  diagnostics.py
src/graph_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
supabase/: run_events_schema.sql
tests/: test_data_driven_graphs.py  test_mcp_baked_environment_probe.py  test_mcp_discovery.py  test_model_providers.py  test_multi_agent_environment.py  test_run_documents.py  test_run_logs.py  test_run_state_reducer.py  test_spreadsheet_rows.py  test_supabase_run_store.py
(+30 files in other folders)
